refactor: tela de cadastro de captura dividida em 4 arquivos diferentes

--- a/TolyID/MVVM/Views/CadastroCapturaTabbedView.xaml
+++ b/TolyID/MVVM/Views/CadastroCapturaTabbedView.xaml
@@ -2,8 +2,9 @@
 <TabbedPage  xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TolyID.MVVM.Views.CadastroCapturaTabbedView"
-             xmlns:viewmodel="clr-namespace:TolyID.MVVM.ViewModels"
+             xmlns:views="clr-namespace:TolyID.MVVM.Views.CadastroDeCaptura"
              xmlns:model="clr-namespace:TolyID.MVVM.Models"
+             xmlns:viewmodel="clr-namespace:TolyID.MVVM.ViewModels"
              x:DataType="viewmodel:CadastroCapturaViewModel"
              Title="Nova Captura"
              BarBackgroundColor="{StaticResource Primary}"
@@ -14,203 +15,9 @@
         <ToolbarItem Text="Voltar" Command="{Binding VoltarCommand}"/>
     </TabbedPage.ToolbarItems>
 
-    <ContentPage Title="1" Padding="20">
-        <ScrollView>
-            <VerticalStackLayout Spacing="20">
-                <Label Text="DADOS GERAIS" 
-                       TextColor="{StaticResource Primary}" 
-                       FontSize="18" FontAttributes="Bold" 
-                       HorizontalTextAlignment="Center"/>   
-
-                <CollectionView ItemsSource="{Binding DadosGerais}">
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate x:DataType="model:CampoCadastro">
-                            <VerticalStackLayout>
-                                <Label Text="{Binding Nome}"
-                                       Style="{StaticResource LabelNomeCampo}"/>
-
-                                <Frame Style="{StaticResource FrameEntradaDeDados}">
-                                    <ContentView Content="{Binding EntradaDeDado}"/>
-                                </Frame>
-                            </VerticalStackLayout>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
-            </VerticalStackLayout>
-        </ScrollView>
-    </ContentPage>
-
-    <ContentPage Title="2" Padding="20">
-        <ScrollView x:Name="FichaAnestesicaScrollView">
-            <StackLayout Spacing="20">
-
-                <Label Text="FICHA ANESTÉSICA" 
-                       TextColor="{StaticResource Primary}" 
-                       FontSize="18" FontAttributes="Bold" 
-                       HorizontalTextAlignment="Center"/>
-
-                <CollectionView ItemsSource="{Binding FichaAnestesica}">
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate x:DataType="model:CampoCadastro">
-                            <VerticalStackLayout>
-
-                                <Label Text="{Binding Nome}"
-                                        Style="{StaticResource LabelNomeCampo}"/>
-
-                                <Frame Style="{StaticResource FrameEntradaDeDados}">
-                                    <ContentView Content="{Binding EntradaDeDado}"/>
-                                </Frame>
-
-                            </VerticalStackLayout>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
-
-                <Label Text="Parâmetros Fisiológicos a cada 10 minutos" 
-                        TextColor="{StaticResource Primary}"
-                        FontAttributes="Bold"
-                        FontSize="15"
-                        HorizontalTextAlignment="Center"
-                        VerticalTextAlignment="Center"/>
-
-                <Grid ColumnDefinitions="*, *, *, *">
-                    <Label Text="FC" Style="{StaticResource LabelNomeCampo}" FontSize="12" HorizontalTextAlignment="Center"/>
-                    <Label Text="FR" Style="{StaticResource LabelNomeCampo}" Grid.Column="1" FontSize="12" HorizontalTextAlignment="Center"/>
-                    <Label Text="OXIMETRIA" Style="{StaticResource LabelNomeCampo}" Grid.Column="2" FontSize="12" HorizontalTextAlignment="Center"/>
-                    <Label Text="TEMPERATURA" Style="{StaticResource LabelNomeCampo}" Grid.Column="3" FontSize="12" HorizontalTextAlignment="Center"/>
-                </Grid>
-
-                <CollectionView Grid.Row="1" ItemsSource="{Binding ParametrosFisiologicos}">
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate x:DataType="model:ParametroFisiologico">
-
-                            <Grid ColumnDefinitions="*, *, *, *"
-                                  ColumnSpacing="10"
-                                  Margin="0, 0, 0, 10">
-
-                                <Frame Style="{StaticResource FrameEntradaDeDados}" >
-                                    <Entry Text="{Binding Fc}" Style="{StaticResource EntryNumerico}" 
-                                           TextChanged="EntryParametros_TextChanged" ReturnType="Next" />
-                                </Frame>
-
-                                <Frame Style="{StaticResource FrameEntradaDeDados}" Grid.Column="1">
-                                    <Entry Text="{Binding Fr}" Style="{StaticResource EntryNumerico}" 
-                                           TextChanged="EntryParametros_TextChanged" ReturnType="Next" />
-                                </Frame>
-
-                                <Frame Style="{StaticResource FrameEntradaDeDados}" Grid.Column="2">
-                                    <Entry Text="{Binding Oximetria}" Style="{StaticResource EntryNumerico}" 
-                                           TextChanged="EntryParametros_TextChanged" ReturnType="Next" />
-                                </Frame>
-
-                                <Frame Style="{StaticResource FrameEntradaDeDados}" Grid.Column="3" >
-                                    <Entry Text="{Binding Temperatura}" Style="{StaticResource EntryNumerico}" 
-                                           TextChanged="EntryParametros_TextChanged" ReturnType="Next" />
-                                </Frame>
-
-                            </Grid>
-
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
-
-                <Button Grid.Column="1" 
-                        CornerRadius="30"
-                        WidthRequest="45" 
-                        Scale=".8"
-                        BackgroundColor="{StaticResource Primary}"
-                        ImageSource="icone_mais_branco.png"
-                        Command="{Binding AdicionaParametrosFisiologicosCommand}"/>
-
-            </StackLayout>
-        </ScrollView>
-    </ContentPage>
-
-    <ContentPage Title="3" Padding="20">
-        <ScrollView>
-            <VerticalStackLayout Spacing="20">
-
-                <Label Text="BIOMETRIA" 
-                       TextColor="{StaticResource Primary}" 
-                       FontSize="18" FontAttributes="Bold" 
-                       HorizontalTextAlignment="Center"/>
-
-                <CollectionView ItemsSource="{Binding Biometria}">
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate x:DataType="model:CampoCadastro">
-                            <VerticalStackLayout>
-
-                                <Label Text="{Binding Nome}"
-                       Style="{StaticResource LabelNomeCampo}"/>
-
-                                <Frame Style="{StaticResource FrameEntradaDeDados}">
-                                    <ContentView Content="{Binding EntradaDeDado}"/>
-                                </Frame>
-
-                            </VerticalStackLayout>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
-
-            </VerticalStackLayout>
-        </ScrollView>
-    </ContentPage>
-
-    <ContentPage Title="4" Padding="20">
-        <StackLayout Spacing="20">
-
-            <Label Text="AMOSTRAS" 
-                   TextColor="{StaticResource Primary}" 
-                   FontSize="18" FontAttributes="Bold" 
-                   HorizontalTextAlignment="Center"/>
-
-            <Frame BorderColor="Transparent">
-                <CollectionView ItemsSource="{Binding Amostras}">
-
-                    <CollectionView.ItemsLayout>
-                        <GridItemsLayout Orientation="Vertical"
-                                         Span="2"
-                                         HorizontalItemSpacing="20"
-                                         VerticalItemSpacing="10"/>
-                    </CollectionView.ItemsLayout>
-
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate x:DataType="model:CampoCadastro">
-                            <HorizontalStackLayout>
-                                <ContentView Content="{Binding EntradaDeDado}"
-                                             HorizontalOptions="Start"
-                                             VerticalOptions="Center"/>
-
-                                <Label Text="{Binding Nome}"
-                                       TextColor="{StaticResource Primary}"
-                                       FontAttributes="Bold"
-                                       Grid.Column="1"
-                                       VerticalTextAlignment="Center"
-                                       HorizontalTextAlignment="Start"/>
-
-                            </HorizontalStackLayout>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
-
-            </Frame>
-
-            
-            <Label Text="{Binding Outros.Nome}"
-                   Style="{StaticResource LabelNomeCampo}"/>
-
-            <Frame Style="{StaticResource FrameEntradaDeDados}">
-                <ContentView Content="{Binding Outros.EntradaDeDado}"/>
-            </Frame>
-
-            <Button Command="{Binding SalvaCapturaNoBancoCommand}"
-                    Text="Finalizar"
-                    TextColor="White"
-                    FontAttributes="Bold"
-                    BackgroundColor="{StaticResource Primary}"
-                    CornerRadius="20"
-                    WidthRequest="200"/>
-        </StackLayout>
-    </ContentPage>
+    <views:DadosGeraisView/>
+    <views:FichaAnestesicaView/>
+    <views:BiometriaView/>
+    <views:AmostrasView/>
 
 </TabbedPage>
