--- a/TolyID/MVVM/Views/CadastroDeCaptura/DadosGeraisView.xaml
+++ b/TolyID/MVVM/Views/CadastroDeCaptura/DadosGeraisView.xaml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
              xmlns:models="clr-namespace:TolyID.MVVM.Models"
              xmlns:viewmodels="clr-namespace:TolyID.MVVM.ViewModels"
              x:DataType="viewmodels:CadastroCapturaViewModel"
              x:Class="TolyID.MVVM.Views.CadastroDeCaptura.DadosGeraisView"
-             Title="1">
+             Title="1"
+             BackgroundColor="White">
     
     <ScrollView>
         <VerticalStackLayout Spacing="20" Padding="20">
@@ -14,7 +16,7 @@
            FontSize="18" FontAttributes="Bold" 
            HorizontalTextAlignment="Center"/>
 
-            <CollectionView ItemsSource="{Binding DadosGerais}">
+            <!--<CollectionView ItemsSource="{Binding DadosGerais}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="models:CampoCadastro">
                         <VerticalStackLayout>
@@ -27,7 +29,35 @@
                         </VerticalStackLayout>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
-            </CollectionView>
+            </CollectionView>-->
+
+            <material:TextField Title="Número de Identificação"
+                        Text="{Binding Captura.DadosGerais.NumeroIdentificacao}"/>
+
+            <material:TextField Title="Local de Captura"
+                        Text="{Binding Captura.DadosGerais.LocalDeCaptura}"/>
+
+            <material:TextField Title="Equipe Responsável"
+                        Text="{Binding Captura.DadosGerais.EquipeResponsavel}"/>
+
+            <material:TextField Title="Instituição"
+                        Text="{Binding Captura.DadosGerais.Instituicao}"/>
+
+            <material:TextField Title="Peso" Keyboard="Numeric"
+                        Text="{Binding Captura.DadosGerais.Peso}"/>
+
+            <material:DatePickerField Title="Data de Captura"
+                         Date="{Binding Captura.DadosGerais.DataDeCaptura}"/>
+
+            <material:TimePickerField Title="Horário de Captura"
+                         Time="{Binding Captura.DadosGerais.HorarioDeCaptura}"/>
+
+            <material:TextField Title="Contato do Responsável"
+                        Text="{Binding Captura.DadosGerais.ContatoDoResponsavel}"/>
+
+            <material:EditorField Title="Observações"
+                        Text="{Binding Captura.DadosGerais.Observacoes}"/>
+
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
