--- a/TolyID/MVVM/Views/EditarTatuPopup.xaml
+++ b/TolyID/MVVM/Views/EditarTatuPopup.xaml
@@ -1,85 +1,67 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <mct:Popup xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
              x:Class="TolyID.MVVM.Views.EditarTatuPopup"
              xmlns:viewmodel="clr-namespace:TolyID.MVVM.ViewModels"
-             x:DataType="viewmodel:MicrochipViewModel"
+             x:DataType="viewmodel:EditarTatuViewModel"
              xmlns:mct="clr-namespace:CommunityToolkit.Maui.Views;assembly=CommunityToolkit.Maui"
              xmlns:views="clr-namespace:TolyID.MVVM.Views">
 
     <mct:Popup.Resources>
         <Style TargetType="{x:Type views:EditarTatuPopup}">
-            <Setter Property="Color" Value="{StaticResource Background}"/>
-            <Setter Property="Size" Value="300, 300"/>
+            <Setter Property="Color" Value="White"/>
+            <Setter Property="Size" Value="300, 240"/>
         </Style>
     </mct:Popup.Resources>
 
-    <VerticalStackLayout Padding="20" Spacing="10">
+    <VerticalStackLayout Padding="20" Spacing="30">
 
-        <Label Text="Identificação do Animal" Style="{StaticResource LabelNomeCampo}"/>
-        <Frame Style="{StaticResource FrameEntradaDeDados}">
-            <Entry x:Name="IdEntry" 
-                   Placeholder="Digite a nova identificação"
-                   Text="{Binding Tatu.IdentificacaoAnimal}"
-                   TextColor="Black"/>
-        </Frame>
-        
+        <material:TextField Title="Identificação do Animal"
+                            Text="{Binding Tatu.IdentificacaoAnimal}"
+                            x:Name="IdEntry"/>
+
         <Grid ColumnDefinitions="8*, 2*" Margin="0, -10, 0, -10">
-            <Label Text="Microchip" 
-                   Style="{StaticResource LabelNomeCampo}"
-                   VerticalOptions="Center">
+            <material:TextField x:Name="ChipEntry"
+                    Title="Microchip"
+                    Keyboard="Numeric"
+                    Text="{Binding Tatu.NumeroMicrochip}"
+                    IsEnabled="{Binding MicrochipAtivado}">
 
-                <Label.Triggers>
-                    <DataTrigger TargetType="Label" Binding="{Binding MicrochipAtivado}" Value="False">
+
+                <material:TextField.Triggers>
+                    <DataTrigger TargetType="material:TextField" Binding="{Binding MicrochipAtivado}" Value="False">
                         <Setter Property="Opacity" Value=".4"/>
                     </DataTrigger>
-                </Label.Triggers>
-                
-            </Label>
-            
+                </material:TextField.Triggers>
+
+            </material:TextField>
+
             <Switch IsToggled="{Binding MicrochipAtivado}"
                     Grid.Column="1"
                     x:Name="MicrochipSwitch"/>
         </Grid>
-        
-        <Frame Style="{StaticResource FrameEntradaDeDados}">
-            <Entry x:Name="ChipEntry" 
-                   Placeholder="Digite o número do microchip"
-                   Keyboard="Numeric"
-                   Text="{Binding Tatu.NumeroMicrochip}"
-                   TextColor="Black"
-                   IsEnabled="{Binding MicrochipAtivado}">
-
-                <Entry.Triggers>
-                    <DataTrigger TargetType="Entry" Binding="{Binding MicrochipAtivado}" Value="False">
-                        <Setter Property="Opacity" Value=".4"/>
-                    </DataTrigger>
-                </Entry.Triggers>
-
-            </Entry>
-        </Frame>
+       
 
         <Grid ColumnDefinitions="*, *" ColumnSpacing="15" Padding="10">
             <Button CornerRadius="20" 
-            Text="Cancelar" 
-            TextColor="White" 
-            Clicked="Cancelar_Clicked"
-            BackgroundColor="{StaticResource Primary}"
-            WidthRequest="90"
-            HeightRequest="40"/>
+                    Text="Cancelar" 
+                    TextColor="White" 
+                    Clicked="Cancelar_Clicked"
+                    BackgroundColor="{StaticResource Primary}"
+                    WidthRequest="90"
+                    HeightRequest="40"/>
 
             <Button CornerRadius="20" 
-            Grid.Column="1" 
-            Text="Atualizar" 
-            TextColor="White" 
-            Clicked="Atualizar_Clicked" 
-            Command="{Binding AtualizaCommand}"
-            BackgroundColor="{StaticResource Primary}"
-            WidthRequest="90"
-            HeightRequest="40"/>
+                    Grid.Column="1" 
+                    Text="Atualizar" 
+                    TextColor="White" 
+                    Clicked="Atualizar_Clicked" 
+                    Command="{Binding AtualizaCommand}"
+                    BackgroundColor="{StaticResource Primary}"
+                    WidthRequest="90"
+                    HeightRequest="40"/>
         </Grid>
-
-
 
     </VerticalStackLayout>
 </mct:Popup>
