--- a/TolyID/MVVM/Views/TatuView.xaml
+++ b/TolyID/MVVM/Views/TatuView.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:m="clr-namespace:UraniumUI.Material.Resources;assembly=UraniumUI.Material"
              x:Class="TolyID.MVVM.Views.TatuView"
              xmlns:viewmodel="clr-namespace:TolyID.MVVM.ViewModels"
              xmlns:model="clr-namespace:TolyID.MVVM.Models"
@@ -8,7 +9,8 @@
              Title="{Binding Tatu.IdentificacaoAnimal}"           
              Shell.BackgroundColor="{StaticResource Primary}"
              Shell.TitleColor="White"
-             BackgroundColor="{StaticResource Background}">
+             BackgroundColor="{StaticResource Background}"
+             Padding="15">
 
     <Shell.TitleView>
         <Grid ColumnDefinitions="7*, 1.5*, 1.5*">
@@ -18,69 +20,95 @@
         </Grid>
     </Shell.TitleView>
 
-    <ScrollView>
-        <StackLayout Padding="20" Spacing="20">
+    <Grid RowDefinitions="1.5*,8.5*" ColumnDefinitions="*, *" RowSpacing="15" ColumnSpacing="15">
 
-            <Label Text="{Binding Tatu.NumeroMicrochip, StringFormat='Chip: {0}'}" 
-                   TextColor="{StaticResource Primary}"
-                   FontFamily="Inter-SemiBold"
-                   FontSize="17"
-                   HorizontalTextAlignment="Center">
+        <Border>
+            <StackLayout VerticalOptions="Center" Spacing="5">
+                <Label Text="Chip"
+                       TextColor="{StaticResource Texto}"
+                       FontFamily="Inter-Regular"
+                       FontSize="15"
+                       HorizontalTextAlignment="Center"
+                       Opacity=".8"/>
+                <Label Text="{Binding Tatu.NumeroMicrochip}" 
+                       TextColor="{StaticResource Texto}"
+                       FontFamily="Inter-SemiBold"
+                       FontSize="20"
+                       HorizontalTextAlignment="Center"/>
+            </StackLayout>
+        </Border>
 
-                <Label.Triggers>
-                    <DataTrigger TargetType="Label" Binding="{Binding Tatu.NumeroMicrochip}" Value="0">
-                        <Setter Property="Text" Value="Chip: não cadastrado"/>
-                    </DataTrigger>
-                </Label.Triggers>
-                            
-            </Label>
+        <Border Grid.Column="1">
+            <StackLayout VerticalOptions="Center" Spacing="5">
+                <Label Text="N° de Capturas"
+                       TextColor="{StaticResource Texto}"
+                       FontFamily="Inter-Regular"
+                       FontSize="15"
+                       HorizontalTextAlignment="Center"
+                       Opacity=".8"/>
+                <Label Text="{Binding NumeroDeCapturas}" 
+                       TextColor="{StaticResource Texto}"
+                       FontFamily="Inter-SemiBold"
+                       FontSize="20"
+                       HorizontalTextAlignment="Center"/>
+            </StackLayout>
+        </Border>
 
-            <Label Text="CAPTURAS" 
-                   TextColor="{StaticResource Primary}" 
-                   FontSize="17" FontFamily="Inter-Bold"
-                   HorizontalTextAlignment="Start"/>
+        <Border Grid.Row="1" Grid.ColumnSpan="2">
+            <StackLayout Spacing="17" Padding="0, 20, 0, 10">
+                <Label Text="Capturas" 
+                       Style="{StaticResource LabelTitulo}" 
+                       TextColor="{StaticResource Texto}"
+                       FontSize="16"/>
+                <ScrollView>
+                    <CollectionView ItemsSource="{Binding Tatu.Capturas}">
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate x:DataType="model:Captura">
 
-            <CollectionView ItemsSource="{Binding Tatu.Capturas}">
+                                <SwipeView>
+                                    <SwipeView.RightItems>
+                                        <SwipeItems SwipeBehaviorOnInvoked="Close">
+                                            <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:TatuViewModel}}, Path=DeletaCapturaCommand}" CommandParameter="{Binding .}">
+                                                <Frame BorderColor="Transparent" BackgroundColor="LightPink"
+                                                       CornerRadius="0"
+                                                       Padding="10"
+                                                       WidthRequest="70">
+                                                    <Image Source="icone_apagar.png" Scale=".45"/>
+                                                </Frame>
+                                            </SwipeItemView>
+                                        </SwipeItems>
+                                    </SwipeView.RightItems>
 
-                <CollectionView.ItemTemplate>
-                    <DataTemplate x:DataType="model:Captura">
+                                    <StackLayout>
+                                        <Frame Padding="20, 10, 10, 10" BorderColor="Transparent" InputTransparent="False" CornerRadius="0">
 
-                        <SwipeView>
-                            <SwipeView.RightItems>
-                                <SwipeItems SwipeBehaviorOnInvoked="Close">
-                                    <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:TatuViewModel}}, Path=DeletaCapturaCommand}" CommandParameter="{Binding .}">
-                                        <Frame BorderColor="Transparent" BackgroundColor="LightPink"
-                                               CornerRadius="15" Margin="5"
-                                               WidthRequest="50" HeightRequest="50" Padding="10">
-                                            <Image Source="icone_apagar.png" Scale=".6"/>
+                                            <Frame.GestureRecognizers>
+                                                <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:TatuViewModel}}, Path=VisualizaCapturaCommand}"
+                                                                        CommandParameter="{Binding .}"/>
+                                            </Frame.GestureRecognizers>
+
+                                            <StackLayout Spacing="-16">
+                                                <Label Text="{Binding DadosGerais.DataDeCaptura, StringFormat='Data: {0:dd/MM/yyyy}'}" 
+                                                       FontFamily="Inter-Medium" 
+                                                       FontSize="17"  
+                                                       TextColor="{StaticResource Texto}"/>
+                                                <Label Text="{Binding DadosGerais.HorarioDeCaptura, StringFormat='&#x0a;Horário: {0:hh\\:mm}'}" 
+                                                       FontFamily="Inter-Regular" 
+                                                       FontSize="15" 
+                                                       TextColor="{StaticResource Texto}"
+                                                       Opacity=".85"/>
+                                            </StackLayout>
                                         </Frame>
-                                    </SwipeItemView>
-                                </SwipeItems>
-                            </SwipeView.RightItems>
+                                        <BoxView BackgroundColor="Black" Opacity=".25" HeightRequest=".1"/>
+                                    </StackLayout>
+                                </SwipeView>
 
-                            <Frame Padding="10" Margin="0, 0, 0, 10" BorderColor="Transparent" InputTransparent="False">
-
-                                <Frame.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:TatuViewModel}}, Path=VisualizaCapturaCommand}"
-                                                          CommandParameter="{Binding .}"/>
-                                </Frame.GestureRecognizers>
-                                
-                                <Label>
-                                    <Label.FormattedText>
-                                        <FormattedString>
-                                            <Span Text="{Binding DadosGerais.DataDeCaptura, StringFormat='Data: {0:dd/MM/yyyy}'}" FontFamily="Inter-Medium" FontSize="17"  TextColor="{StaticResource Primary}"/>
-                                            <Span Text="{Binding DadosGerais.HorarioDeCaptura, StringFormat='&#x0a;Horário: {0:hh\\:mm}'}" FontFamily="Inter-Regular" FontSize="16" TextColor="{StaticResource Primary}"/>
-                                        </FormattedString>
-                                    </Label.FormattedText>
-                                </Label>
-                            </Frame>
-
-                        </SwipeView>
-
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
-        </StackLayout>
-    </ScrollView>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                </ScrollView>
+            </StackLayout>
+        </Border>
+    </Grid>
     
 </ContentPage>
